--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Orenandshawna.us</h1>
-        <p></p>
-
-        <p class="view">
-        </p>
 
 
         <ul>
@@ -29,13 +24,14 @@
         </ul>
       </header>
       <section>
-      <h3>Coming soon</h3>
 
       </section>
       <footer>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="javascripts/javascript_is_bullshit.js"></script>
     
   </body>
 </html>
