--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </div>
         <div class="vcenter col-sm-5 col-centered text-left">
           <span class="pull-left">
-            Invitation to follow.</br>
-            <a href="http://www.mountaintopinn.com">Book Accomodations <i class="fa fa-external-link"></i></a>
+            <a href="https://docs.google.com/forms/d/1IA6IcFqJMgJYM4KtGP6CXMhqovzw3qkTNdPhDj616r8/viewform"><b>RSVP</b>&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
+            <a href="http://www.mountaintopinn.com">Book Accomodations&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
+            <a href="http://giftregistry.hbc.com/grworks/prj/generic_online/jsp/common/grbookmark.jsp?retailerid=4&registryid=400130086934">HBC Registery&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
           <span>
         </div>
       </div>
