--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
         <div class="vcenter col-sm-5 col-centered text-left">
           <span class="pull-left">
             <a href="https://docs.google.com/forms/d/1IA6IcFqJMgJYM4KtGP6CXMhqovzw3qkTNdPhDj616r8/viewform"><b>Click here to RSVP</b>&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
-            <a href="http://www.mountaintopinn.com">Book Accomodations&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
+            <div id="accordion">
+              <a onclick="$('#accomodation_list').collapse('toggle');" data-toggle="collapse" data-parent="#accordion" href="accomodation_list">Book Accomodations&nbsp;&nbsp;</a></br>
+              <div id="accomodation_list" class="collapse">
+                <a href="http://www.mountaintopinn.com">Mountain Top Inn&nbsp;&nbsp;<i class="fa fa-external-link"></i></a> (Call For Special Rate)</br>
+                <a href="http://www.foxcreekinn.com/">Fox Creek Inn&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
+                <a href="http://www.mendonmountainviewlodge.com/">Mendon Mountain View Lodge&nbsp;&nbsp;<i class="fa fa-external-link"></i></a></br>
+                <a href="http://www.bestwestern.com/">Best Western Suites Rutland-Killington&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
+              </div>
+            </div>
             <a href="http://giftregistry.hbc.com/grworks/prj/generic_online/jsp/common/grbookmark.jsp?retailerid=4&registryid=400130086934">View Registery&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
           <span>
         </div>
