--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="row row-centered">
         <div class="vcenter col-sm-5 col-centered">
           <span class="pull-right text-right">
-            October 16th, 2016</br>
+            3:30pm, October 16th, 2016</br>
             Mountain Top Inn, Chittenden, VT</br>
           <span>
         </div>
